--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production && nodemon server.js",
+    "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "Elena Ackovska",
@@ -22,6 +22,7 @@
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
+    "pug": "^3.0.2",
     "slugify": "^1.6.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
