--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production&&nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Elena Ackovska",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemailer": "^6.6.3",
     "pug": "^3.0.2",
+    "sharp": "^0.29.0",
     "slugify": "^1.6.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
@@ -36,6 +44,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^1.17.0"
   },
   "engines": {
